[tool.black]
target-version = ['py38']

[tool.poetry]
name = "hash-cracker"
version = "0.1.0"
description = "yapapi sha256 cracker example"
authors = ["Golem Factory <contact@golem.network>"]
license = "GPL-3.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
]
repository = "https://github.com/golemfactory/hash-cracker"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
yapapi = "^0.5"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.4"
mypy = "^0.790"

